<resources>
    <string name="app_name">Note Application</string>
    <string name="tasks_list">Tasks List</string>
    <string name="settings">Settings</string>
    <string name="take_a_note_app">Take a Note App</string>
    <string name="adding_a_new_note">Adding a new note</string>
    <string name="add_a_new_note">Add a new note</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="add_note">Add note</string>
    <string name="enter_task_desc">Enter Task Desc</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit_task_title">Edit task title</string>
    <string name="edit_task_description">Edit task description</string>
    <string name="save_changes">Save Changes</string>
</resources>