<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_tasks_details"
    android:layout_marginBottom="?android:attr/actionBarSize"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_task"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_edit_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edit_task_title"
                android:textColor="@color/black"
                tools:text="This is your task title"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/desc_edit_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_desc_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edit_task_description"
                android:textColor="@color/black"
                tools:text="This is your task desc"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_addTask"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:backgroundTint="@color/my_primary"
            app:cornerRadius="12dp"
            android:elevation="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center"
            android:paddingVertical="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>

